<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">SmartVote</string>
    <string name="title_activity_intro">Welcome!</string>
    <string name="enPara1LBL">Welcome to SmartVote Application!</string>
    <string name="bnPara1LBL">স্মার্টভোট অ্যাপ্লিকেশানে আপনাকে স্বাগতম!</string>
    <string name="enPara2LBL">The next few steps will guide you through the voting process.</string>
    <string name="bnPara2LBL">পরবর্তী ধাপ গুলো আপনাকে আপনার ভোট দিতে সহয়তা করবে।</string>
    <string name="EnPara3LBL">Press the Next button below to proceed with the process.</string>
    <string name="bnPara3LBL">অনুগ্রহপূর্বক নিম্নের Next বাটনে চাপ দিয়ে পরবর্তী ধাপে অগ্রসর হন।</string>
    <string name="btnNextLBL">Next</string>
    <string name="title_activity_fpverify">Fingerprint Verification</string>
    <string name="EnPara1FPLBL">Please press Start below and place your registered finger on the Fingerprint scanner when it glows blue.</string>
    <string name="bnPara1FPLBL">নিচের Start বাটনে চাপ দিয়ে, ফিঙ্গারপ্রিন্ট স্ক্যানারে নীল আলো জ্বলা মাত্র অনুগ্রহপূর্বক আপনার বৃদ্ধাঙ্গুলি নিচের স্ক্যানারের উপর রাখুন।</string>
    <string name="title_activity_eballot">eBallot</string>
    <string name="EBInstrLBL">Long press on your selected candidate to cast your vote. You will be prompted to finalize your selection later.</string>
    <string name="EBBnInstrLBL">নিচের লিস্ট থেকে আপনার পছন্দের প্রার্থীকে ভোট দিতে তার নামের উপর কিছুক্ষন চাপ দিয়ে রাখুন। আপনার ভোট সংরক্ষণ করার আগে আপনার অনুমতি নেওয়া হবে।</string>
    <string name="ballotESymDesc">Entity Symbol</string>
    <string name="title_activity_load_data">Load Database</string>
    <string name="LoadDBInstrLBL">It looks like the application has been started for the first time or the database was tampered with. Please enter the location of the zip file (stored in storage) that contains the required files for the application, along with the password, and press Load Database below to proceed. \n\nYou need to identify yourself following the load of database.</string>
    <string name="loadDBPathLBL">Path:</string>
    <string name="loadDBPassLBL">Password:</string>
    <string name="btnLoadDBLBL">Load Database</string>
    <string name="title_activity_new_voter">Add New Voter</string>
    <string name="AddVoterInstrLBL">Please fill out the fields below to register voter. The fields marked with star is mandatory to fill.</string>
    <string name="nidLBL">NID (13 Digits):</string>
    <string name="FNameLBL">First Name:</string>
    <string name="MNameLBL">Middle Name:</string>
    <string name="LNameLBL">Last Name:</string>
    <string name="AddLBL">Address:</string>
    <string name="dobLBL">Date of Birth:</string>
    <string name="FANameLBL">Name of Father:</string>
    <string name="MANameLBL">Name of Mother:</string>
    <string name="btnAddVoterSaveLBL">Save</string>
    <string name="title_activity_admin_panel">Administrative Panel</string>
    <string name="btnEnVoteLBL">Enable Voting</string>
    <string name="btnDnVoteLBL">Disable Voting</string>
    <string name="btnNewVoterLBL">Add New Voter</string>
    <string name="btnRmvVoterLBL">Remove Existing Voter</string>
    <string name="btnGenRepLBL">Generate Report</string>
    <string name="txtwelcome">Welcome</string>
    <string name="exitLBL">Exit</string>
    <string name="title_activity_user_info">User Information</string>
    <string name="VInfoPrompt">Please verify your information before you are redirected to the eBallot.</string>
    <string name="VImageHint">This is the image of the voter</string>
    <string name="btnEnrollLBL">Enroll</string>
    <string name="btnDiscardLBL">Discard</string>
    <string name="btnTpLBL">Take Picture</string>
    <string name="title_activity_admin_voter_panel">Choose Desired Panel</string>
    <string name="txtAVPrompt">"It seems like you are registered as both a voter and an administrator. Please choose to access your desired panel."</string>
    <string name="txtVoteDone">"If you have casted your vote already, you may not access the voter panel. The button will appear disabled."</string>
    <string name="btnToAdminLBL">"Go to Administrative Panel"</string>
    <string name="btnToVoterLBL">"Go to Voter Panel"</string>
    <string name="title_activity_remove_user">Remove Existing User</string>
    <string name="remove_voter_prompt">Please long press on the NID of the user you wish to remove from the database.</string>
    <string name="backAPlbl">Back</string>
    <string name="title_activity_thank_user">Thank You!</string>
    <string name="thank_msg">Thank you for casting your vote! Please detach the ballot paper from the printer and place it in the designated physical ballot box.</string>
    <string name="thank_msg_bn">ধন্যবাদ! আপনার ভোটটি সংরক্ষণ করা হয়েছে। অনুগ্রহপূর্বক প্রিন্টার থেকে আপনার ব্যালট পেপারটি ছিড়ে নিয়ে নির্ধারিত ব্যালট বক্সে ফেলুন।</string>
    <string name="thank_desc">Thank you image</string>
    <string name="title_activity_report">Report</string>
    <string name="txtRepPrmpt">The current vote count is:</string>
</resources>
