<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:orientation="vertical"
        tools:ignore="UselessParent" >

        <TextView
            android:id="@+id/txtAVPrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtAVPrompt" />

        <Button
            android:id="@+id/btnToVotingInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnToVoterLBL" />

        <TextView
            android:id="@+id/txtVoteDonePrompt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/txtVoteDone" />

        <Button
            android:id="@+id/btnToAdminPanel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnToAdminLBL" />

    </LinearLayout>

</RelativeLayout>