<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    tools:context="${relativePackage}.${activityClass}" >

    <ImageView
        android:id="@+id/imgTY"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:contentDescription="@string/thank_desc"
        android:src="@drawable/thankyou" />

    <TextView
        android:id="@+id/txtThankMsg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/imgTY"
        android:layout_marginTop="5dp"
        android:text="@string/thank_msg" />

    <TextView
        android:id="@+id/txtThankMsgBn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="5dp"
        android:layout_below="@+id/txtThankMsg"
        android:text="@string/thank_msg_bn" />

</RelativeLayout>